--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-async-handler": "^1.2.0",
     "express-jwt": "^8.4.1",
     "express-validator": "^7.1.0",
     "google-auth-library": "^9.12.0",
