--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "google-auth-library": "^9.12.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.14"
   }
 }
